--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <section >
             <div class="section our-team">
                 <h2>Our Team</h2>
-                <div class="our-team-photos">>
+                <div class="our-team-photos">
                     <ul>
                         <li>
                             <img src="./images/walker.jpg" alt="Product Designer" width="300">
