--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="container">
     <!-- Menu Bar -->
     <header class="global-header">
-        <div class="mobile-navigation">
+        <div class="mobile-navigation-portofolio">
             <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=1-293&mode=design&t=0eOfYrUTI4rjxHB8-0" target="_blank"><span class="logo"><span class="web-word">Web</span><span class="studio-word">Studio</span></span></a>
             <div class="svg-menu-opener">
                 <svg>
