--- a/portofolio.html
+++ b/portofolio.html
@@ -11,6 +11,14 @@
 </head>
 <body class="container">
     <header class="global-header-portofolio">
+        <div class="mobile-navigation">
+            <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=1-293&mode=design&t=0eOfYrUTI4rjxHB8-0" target="_blank"><span class="logo"><span class="web-word">Web</span><span class="studio-word">Studio</span></span></a>
+            <div class="svg-menu-opener">
+                <svg>
+                    <use href="./images/icons.svg#icon-menu-hamburger" />
+                </svg>
+            </div>
+        </div>
         <div class="menu-bar">
             <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=1-293&mode=design&t=0eOfYrUTI4rjxHB8-0" target="_blank"><span class="logo"><span class="web-word">Web</span><span class="studio-word">Studio</span></a>
             <div class="main-navigation">
