--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="mobile-nav-links">
                 <a href="./index.html">Studio</a>
                 <a href="./portofolio.html" >Portofolio</a>
-                <a href="#">Contacts</a>
+                <a href="#footer">Contacts</a>
             </div>
             <div class="mobile-contact-type">
                 <a class="phone-number-modal-menu" href="tel:+1-212-772-4150">+1 212-772-4150</a>
@@ -366,7 +366,7 @@
         </section>
 
     <!-- CONTACT ADRESS -->
-    <footer class="footer-container">  
+    <footer id="footer" class="footer-container">  
         <div class="footer-adress-container">
             <a href="./index.html"><span class="web-word">Web</span><span class="studio-word">Studio</span></a>
             <address>
