--- a/portofolio.html
+++ b/portofolio.html
@@ -20,7 +20,7 @@
             <div class="mobile-nav-links">
                 <a href="./index.html">Studio</a>
                 <a href="./portofolio.html" >Portofolio</a>
-                <a href="#">Contacts</a>
+                <a href="#footer">Contacts</a>
             </div>
             <div class="mobile-contact-type">
                 <a class="phone-number-modal-menu" href="tel:+1-212-772-4150">+1 212-772-4150</a>
