--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="mobile-nav-links">
                 <a href="./index.html">Studio</a>
                 <a href="./portofolio.html" >Portofolio</a>
-                <a href="#footer">Contacts</a>
+                <a href="#footer-link-contacts">Contacts</a>
             </div>
             <div class="mobile-contact-type">
                 <a class="phone-number-modal-menu" href="tel:+1-212-772-4150">+1 212-772-4150</a>
@@ -60,7 +60,7 @@
                     <ul>
                         <li class="nav-item1"><a href="./index.html" class="navigation-link-current">Studio</a></li>
                         <li class="nav-item2"><a href="./portofolio.html" class="navigation-link">Portofolio</a></li>
-                        <li class="nav-item3"><a href="#footer-container" class="navigation-link">Contacts</a></li>
+                        <li class="nav-item3"><a href="#footer-link-contacts" class="navigation-link">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -366,7 +366,7 @@
         </section>
 
     <!-- CONTACT ADRESS -->
-    <footer id="footer" class="footer-container">  
+    <footer id="footer-link-contacts" class="footer-container">  
         <div class="footer-adress-container">
             <a href="./index.html"><span class="web-word">Web</span><span class="studio-word">Studio</span></a>
             <address>
