--- a/portofolio.html
+++ b/portofolio.html
@@ -20,7 +20,7 @@
             <div class="mobile-nav-links">
                 <a href="./index.html">Studio</a>
                 <a href="./portofolio.html" >Portofolio</a>
-                <a href="#footer">Contacts</a>
+                <a href="#footer-links-contacts">Contacts</a>
             </div>
             <div class="mobile-contact-type">
                 <a class="phone-number-modal-menu" href="tel:+1-212-772-4150">+1 212-772-4150</a>
@@ -53,7 +53,7 @@
                     <ul>
                         <li class="nav-item1"><a href="./index.html" class="navigation-link">Studio</a></li>
                         <li class="nav-item2"><a href="./portofolio.html" class="navigation-link-current">Portofolio</a></li>
-                        <li class="nav-item3"><a href="#footer-container" class="navigation-link">Contacts</a></li>
+                        <li class="nav-item3"><a href="#footer-link-contacts" class="navigation-link">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -191,7 +191,7 @@
             </address>
         </div>
        
-        <div class="footer-social">
+        <div id="footer-link-contacts" class="footer-social">
             <p>Find us on</p>
             <div class="footer-svgs">
                 <div class="container-for-footer-svgs">
