--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- MAIN SECTION -->
     <main class="web-main">
-        <h1>EFFECTIVE SOLUTIONS FOR
+        <h1 class="main-title">EFFECTIVE SOLUTIONS FOR
         <br>
             YOUR BUSINESS
         </h1>
@@ -406,10 +406,8 @@
         </div>
         <div class="newslatter-subscribe">
             <p>Subscribe to the newsletter</p>
-            <div class="label-for-footer">
-                <label>
-                    <input type="email" placeholder="E-mail">
-                </label>
+            <div class="input-for-footer">
+                <input type="email" placeholder="E-mail">
                 <button type="submit">Subscribe
                 <svg>
                     <use href="./images/icons.svg#icon-icon-send" />
