--- a/portofolio.html
+++ b/portofolio.html
@@ -20,7 +20,7 @@
             <div class="mobile-nav-links">
                 <a href="./index.html">Studio</a>
                 <a href="./portofolio.html" >Portofolio</a>
-                <a href="#footer-links-contacts">Contacts</a>
+                <a href="#footer-link-contacts">Contacts</a>
             </div>
             <div class="mobile-contact-type">
                 <a class="phone-number-modal-menu" href="tel:+1-212-772-4150">+1 212-772-4150</a>
@@ -37,10 +37,11 @@
             </div>
         </nav>
     </div>
-    <header class="global-header-portofolio">
-        <div class="mobile-navigation">
+    
+    <header class="global-header">
+        <div class="mobile-navigation-portofolio">
             <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=1-293&mode=design&t=0eOfYrUTI4rjxHB8-0" target="_blank"><span class="logo"><span class="web-word">Web</span><span class="studio-word">Studio</span></span></a>
-            <div class="svg-menu-opener">
+            <div class="svg-menu-opener js-open-menu">
                 <svg>
                     <use href="./images/icons.svg#icon-menu-hamburger" />
                 </svg>
@@ -48,6 +49,11 @@
         </div>
         <div class="menu-bar">
             <a href="https://www.figma.com/file/TwjztGEkwMravGL9pPVt8l/Web-Studio-Homework-Project?type=design&node-id=1-293&mode=design&t=0eOfYrUTI4rjxHB8-0" target="_blank"><span class="logo"><span class="web-word">Web</span><span class="studio-word">Studio</span></span></a>
+            <div class="svg-menu-opener">
+                <svg>
+                    <use href="./images/icons.svg#icon-menu-hamburger" />
+                </svg>
+            </div>
             <div class="main-navigation">
                 <nav >
                     <ul>
@@ -80,6 +86,7 @@
       
 
     </header>
+
 
     <main class="section portofolio">
         <nav>
